# rgb-tui

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yaml
snap/: snapcraft.yaml
src/: main.cpp
